Made background fixed, better readability

--- a/assets/styles/theme.less
+++ b/assets/styles/theme.less
@@ -10,6 +10,7 @@
 
 body{
 	#gradient .radial(@greenLight, @greenDark);
+	background-attachment: fixed;
 }
 
 .inline-list{
